--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   padding-bottom: 0px;
 }
 
-.reccommended {
+.recommended {
   margin: 0 0 0.4rem 10px;
   font-size: 50%;
   opacity: 0.9;
